[package]
name = "eth_client"
version = "0.1.0"
edition = "2021"

description = "Minimal Ethereum client in Rust"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
